kubernetes/consul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: bookings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: hashicorp/consul:latest
          ports:
            - containerPort: 8500 # HTTP API порт
            - containerPort: 8600 # DNS порт
          volumeMounts:
            - name: consul-config
              mountPath: /consul/config
            - name: consul-data
              mountPath: /consul/data
          command: ["consul", "agent", "-config-dir", "/consul/config"]
      volumes:
        - name: consul-config
          configMap:
            name: consul-config
        - name: consul-data
          persistentVolumeClaim:
            claimName: consul-pvc
