kubernetes/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: bookings
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 8081      # Порт, на котором сервис доступен внутри кластера
    targetPort: 80 # Порт контейнера
  type: LoadBalancer
