kubernetes/seq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seq
  namespace: bookings
spec:
  selector:
    app: seq
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5341 # Порт для доступа к Seq
